--- a/QLNS_WPF_LINQ/App.xaml
+++ b/QLNS_WPF_LINQ/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QLNS_WPF_LINQ"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window1.xaml">
     <Application.Resources>
          
     </Application.Resources>
